--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^2.6.11"
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "bootstrap-vue": "^2.20.1",
+    "lodash": "^4.17.20",
+    "vue": "^2.6.12"
   },
   "devDependencies": {
     "@vue/cli-service": "~4.5.0",
